# tamagotchi-solana

./: Anchor.toml  package.json
app/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
app/src/components/: TamagotchiNFTDisplay.tsx  Wallets.tsx
app/src/pages/: _app.tsx  game.tsx  index.tsx  market.tsx
app/src/styles/: globals.css
programs/tamagotchi-solana/: Cargo.toml
programs/tamagotchi-solana/src/: lib.rs
tests/: airdrop.ts  tamagotchi-solana.js
